# grifo

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
app/api/: routes.py
app/core/: config.py  llm.py  logging.py
app/data_source/: loaders.py  mcp_client.py  vector_store.py
app/presentation/: web_ui.py
app/processing/: agent.py  chains.py  memory.py  schemas.py  tool_executor.py  tools.py
app/processing/rag/: chains.py  controller.py  graph.py  nodes.py  state.py
app/utils/: text_processor.py
scripts/: populate_db.py
specs/agent/: reflexion_agent.md  vector_store.md
specs/agent/agentic_rag/: implementation_plan.md  rag_agentic_replication_guide.md  rag_agentic_spec.md
specs/agent/reflexion_agent/: reflexion_agent.md  reflexion_agent_spec.md  replication_guide.md
specs/api/: basic_agent_endpoints.md
specs/architecture_decision_records/: basic_agent_implementation_guide.md
tests/: test_agent_chains.py  test_agent_graph_structure.py  test_agent_schemas.py
tests/api/: test_chat_v1.py  test_management.py
tests/integration/: test_agent_flow.py  test_api_ingestion.py  test_e2e_demo.py  test_rag_full_flow.py  test_vector_ingestion.py
tests/unit/: test_agent.py  test_bm25.py  test_chains.py  test_hybrid.py  test_loaders.py  test_loaders_validation.py  test_memory.py  test_observability.py  test_populate_db.py  test_rag_chains.py  test_text_processor.py  test_tool_executor.py  test_web_loaders.py
